<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llFacebookPostLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="480px"
        android:layout_height="73px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0px"
        android:layout_marginTop="0px"
        android:background="@drawable/titleback" >

        <Button
            android:id="@+id/btnFacebookPost_Setting"
            android:layout_width="64px"
            android:layout_height="52px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12px"
            android:layout_marginTop="12px"
            android:background="@drawable/settingbutton" />

        <TextView
            android:id="@+id/lblFacebookPost_Title"
            android:layout_width="250px"
            android:layout_height="44px"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/FacebookPostTitle"
            android:textColor="@color/light_blue"
            android:textSize="32px" />

    </RelativeLayout>

    <EditText
        android:id="@+id/txtFacebookPost_Content"
        android:layout_width="420px"
        android:layout_height="540px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginLeft="30px"
        android:layout_marginTop="30px"
        android:background="@drawable/edittext_grayround"
        android:gravity="top|left"
        android:hint="@string/FacebookPost_DefaultPostContent"
        android:paddingLeft="20px"
        android:paddingRight="20px"
        android:paddingTop="20px"
        android:textColor="@color/dark_gray"
        android:textSize="26px" />

    <Button
        android:id="@+id/btnFacebookPost_Share"
        android:layout_width="200px"
        android:layout_height="70px"
        android:layout_alignLeft="@+id/txtFacebookPost_Content"
        android:layout_below="@+id/txtFacebookPost_Content"
        android:layout_marginTop="40px"
        android:background="@drawable/bluebutton"
        android:text="@string/FacebookPost_Share"
        android:textColor="@color/white"
        android:textSize="28px" />

    <Button
        android:id="@+id/btnFacebookPost_Submit"
        android:layout_width="200px"
        android:layout_height="70px"
        android:layout_alignRight="@+id/txtFacebookPost_Content"
        android:layout_alignTop="@+id/btnFacebookPost_Share"
        android:background="@drawable/bluebutton"
        android:text="@string/DestSubmit_Submit"
        android:textColor="@color/white"
        android:textSize="28px" />

</RelativeLayout>